# Meta-Vision-SolaisNG

irm_uart/: package.xml  setup.cfg  setup.py
irm_uart/irm_uart/: irm_uart.py
solais_interfaces/: CMakeLists.txt
solais_serial/: CMakeLists.txt  package.xml
solais_serial/include/solais_serial/: solais_serial_legacy.hpp
solais_serial/src/: communicator.py  solais_serial_legacy.cpp
